force-app/main/default/objects/LOBi_Order_Revenue__c/LOBi_Order_Revenue__c.object-meta.xml
<CustomObject>
    <label>LOBi Order Revenue</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>LOBi Order Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOBi Order Revenue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>