force-app/main/default/objects/LOBi_Order_Revenue__c/fields/Affinity_ID__c.field-meta.xml
<CustomField>
    <fullName>Affinity_ID__c</fullName>
    <externalId>true</externalId>
    <label>Affinity ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>