force-app/main/default/objects/LOBi_Order_Revenue__c/fields/Client_Partner1__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner1__c</fullName>
    <label>Client Partner1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>