force-app/main/default/objects/LOBi_Order_Revenue__c/fields/Client_Partner_Account_ID2__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner_Account_ID2__c</fullName>
    <label>Client Partner Account ID2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>