force-app/main/default/objects/LOBi_Order_Revenue__c/fields/Networking_partner_Account_ID2__c.field-meta.xml
<CustomField>
    <fullName>Networking_partner_Account_ID2__c</fullName>
    <label>Networking partner Account ID2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>