force-app/main/default/objects/LOBi_Order_Revenue__c/fields/Networking_Partner_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Networking_Partner_Name_1__c</fullName>
    <label>Networking Partner Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>