force-app/main/default/objects/LOBi_Order_Revenue__c/fields/Server_Partner2__c.field-meta.xml
<CustomField>
    <fullName>Server_Partner2__c</fullName>
    <label>Server Partner2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>