force-app/main/default/objects/LOBi_Order_Revenue__c/fields/Server_Partner2_Rev__c.field-meta.xml
<CustomField>
    <fullName>Server_Partner2_Rev__c</fullName>
    <label>Server Partner2 Rev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>