force-app/main/default/objects/LOBi_Order_Revenue__c/fields/Storage_Partner1__c.field-meta.xml
<CustomField>
    <fullName>Storage_Partner1__c</fullName>
    <label>Storage Partner1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>