force-app/main/default/objects/LOBi_Order_Revenue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Affinity_ID__c</columns>
    <columns>Client_Partner1__c</columns>
    <columns>Client_Partner1_Rev__c</columns>
    <columns>Client_Partner2__c</columns>
    <columns>Client_Partner2_Rev__c</columns>
    <columns>Networking_Partner1_Rev__c</columns>
    <columns>Networking_Partner2_Rev__c</columns>
    <columns>Networking_Partner_Name_1__c</columns>
    <columns>Networking_Partner_Name_2__c</columns>
    <columns>Server_Partner1__c</columns>
    <columns>Server_Partner1_Rev__c</columns>
    <columns>Server_Partner2__c</columns>
    <columns>Server_Partner2_Rev__c</columns>
    <columns>Storage_Partner1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>